counter-frontend/counter-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
spec:
  selector:
    matchLabels:
      app: counter-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: >-
            ghcr.io/kanishankoneswaran/counter-frontend:v1
          ports:
            - containerPort: 3000
              protocol: TCP
