counter-frontend/counter-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-frontend
spec:
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: 80
  wildcardPolicy: None
